# tracing-rs-examples

./: .gitignore  Cargo.toml  README.md  docker-compose.yaml  otel-collector.yaml  sampling_strategies.json
src/: main.rs
